<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
		<relativePath />
	</parent>

	<groupId>fr.inria.eventcloud</groupId>
	<artifactId>eventcloud-parent</artifactId>
	<version>1.7.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>eventcloud-parent</name>
	<description>Parent module for EventCloud maven related modules.</description>
	<url>https://bitbucket.org/eventcloud/eventcloud</url>
	<inceptionYear>2010</inceptionYear>

	<prerequisites>
		<maven>3.0.3</maven>
	</prerequisites>

	<scm>
		<connection>scm:hg:https://bitbucket.org/eventcloud/eventcloud</connection>
		<developerConnection>scm:hg:https://bitbucket.org/eventcloud/eventcloud</developerConnection>
		<url>https://bitbucket.org/eventcloud/eventcloud</url>
		<tag>HEAD</tag>
	</scm>

	<ciManagement>
		<system>Jenkins</system>
		<url>http://eventcloud.inria.fr/jenkins</url>
	</ciManagement>

	<issueManagement>
		<system>Bitbucket</system>
		<url>https://bitbucket.org/eventcloud/eventcloud/issues</url>
	</issueManagement>

	<repositories>
		<repository>
			<id>eventcloud-releases</id>
			<url>http://eventcloud.bitbucket.org/maven/releases</url>
			<releases>
				<enabled>true</enabled>
				<checksumPolicy>ignore</checksumPolicy>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<developers>
		<developer>
			<id>abourdin</id>
			<name>Alexandre Bourdin</name>
			<email>alexandre.bourdin@inria.fr</email>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>bsauvan</id>
			<name>Bastien Sauvan</name>
			<email>bastien.sauvan@inria.fr</email>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>ialshalb</id>
			<name>Iyad Alshabani</name>
			<email>iyad.alshabani@inria.fr</email>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>jrochas</id>
			<name>Justine Rochas</name>
			<email>justine.rochas@inria.fr</email>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>lpellegr</id>
			<name>Laurent Pellegrino</name>
			<email>laurent.pellegrino@inria.fr</email>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>mantoine</id>
			<name>Maeva Antoine</name>
			<email>maeva.antoine@inria.fr</email>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
	</developers>

	<distributionManagement>
		<repository>
			<id>sonatype-nexus-staging</id>
			<name>sonatype-nexus-staging</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<name>sonatype-nexus-snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<licenses>
		<license>
			<name>GNU Affero General Public License, Version 3.0</name>
			<url>http://www.gnu.org/licenses/agpl-3.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<organization>
		<name>INRIA Sophia Antipolis</name>
		<url>http://www.inria.fr/en/</url>
	</organization>

	<modules>
		<module>eventcloud</module>
		<module>proactive-deployment</module>
		<module>proactive-p2p-structured</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.1.2</version>
			</dependency>
			<dependency>
				<groupId>org.codehaus.janino</groupId>
				<artifactId>janino</artifactId>
				<version>2.7.6</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.17</version>
			</dependency>
			<dependency>
				<groupId>com.beust</groupId>
				<artifactId>jcommander</artifactId>
				<version>1.35</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>17.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-math3</artifactId>
				<version>3.3</version>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf.services.wsn</groupId>
				<artifactId>cxf-services-wsn-core</artifactId>
				<version>2.5.4</version>
				<exclusions>
					<exclusion>
						<groupId>javax.servlet</groupId>
						<artifactId>servlet-api</artifactId>
					</exclusion>
					<exclusion>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>net.sf.ehcache</groupId>
				<artifactId>ehcache</artifactId>
				<version>2.8.3</version>
				<exclusions>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-api</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.infinispan</groupId>
				<artifactId>infinispan-core</artifactId>
				<version>6.0.2.Final</version>
			</dependency>

			<dependency>
				<groupId>org.apache.jena</groupId>
				<artifactId>jena-arq</artifactId>
				<version>2.12.0</version>
				<exclusions>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-api</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>jcl-over-slf4j</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-log4j12</artifactId>
					</exclusion>
					<exclusion>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.apache.jena</groupId>
				<artifactId>jena-tdb</artifactId>
				<version>1.1.0</version>
				<exclusions>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-api</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>jcl-over-slf4j</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-log4j12</artifactId>
					</exclusion>
					<exclusion>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.apfloat</groupId>
				<artifactId>apfloat</artifactId>
				<version>1.8.1</version>
				<exclusions>
					<exclusion>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.objectweb.proactive</groupId>
				<artifactId>proactive-programming-mao-bundle</artifactId>
				<version>5.4.2</version>
				<exclusions>
					<exclusion>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
					</exclusion>
					<exclusion>
						<groupId>net.sf.ehcache</groupId>
						<artifactId>ehcache</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.ow2.proactive</groupId>
				<artifactId>scheduling-common-core</artifactId>
				<version>3.1.1</version>
				<exclusions>
					<exclusion>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
					</exclusion>
					<exclusion>
						<groupId>net.sf.ehcache</groupId>
						<artifactId>ehcache</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.ow2.proactive</groupId>
				<artifactId>scheduling-scheduler-core</artifactId>
				<version>3.1.1</version>
				<exclusions>
					<exclusion>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.ow2.play</groupId>
				<artifactId>play-commons-eventformat</artifactId>
				<version>1.1.0</version>
			</dependency>
			<dependency>
				<groupId>org.ow2.play</groupId>
				<artifactId>play-commons-constants</artifactId>
				<version>1.1.0</version>
			</dependency>
			<dependency>
				<groupId>com.ebmwebsourcing.projects.soceda.wp2-federated-middleware-layer.social-components</groupId>
				<artifactId>social-filter</artifactId>
				<version>v0.5</version>
				<exclusions>
					<exclusion>
						<groupId>org.objectweb.proactive</groupId>
						<artifactId>proactive-programming-bundle</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.objectweb.proactive</groupId>
						<artifactId>proactive-programming-mao-bundle</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>com.esotericsoftware.yamlbeans</groupId>
				<artifactId>yamlbeans</artifactId>
				<version>1.06</version>
			</dependency>
			<dependency>
				<groupId>joda-time</groupId>
				<artifactId>joda-time</artifactId>
				<version>2.4</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.11</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<!-- this is the parent, we only define pluginManagement, not plugins. -->
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-enforcer-plugin</artifactId>
										<versionRange>[1.0,)</versionRange>
										<goals>
											<goal>enforce</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.objectweb.proactive</groupId>
										<artifactId>proactive-maven-plugin</artifactId>
										<versionRange>[1.2.3,)</versionRange>
										<goals>
											<goal>gcm</goal>
											<goal>stubs</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.4.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.5</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.8</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.5</version>
					<configuration>
						<archive>
							<manifest>
								<addClasspath>true</addClasspath>
							</manifest>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.9.1</version>
					<configuration>
						<aggregate>true</aggregate>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-plugin-plugin</artifactId>
					<version>3.3</version>
				</plugin>
				<plugin>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5</version>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.6</version>
				</plugin>
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.4</version>
				</plugin>
				<plugin>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.3</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.17</version>
				</plugin>
				<plugin>
					<groupId>org.objectweb.proactive</groupId>
					<artifactId>proactive-maven-plugin</artifactId>
					<version>1.2.3</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<fork>true</fork>
					<meminitial>128m</meminitial>
					<maxmem>512m</maxmem>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<forkCount>1</forkCount>
					<argLine>-server -Xms256M -Xmx6G -XX:MaxPermSize=512M</argLine>
					<reuseForks>false</reuseForks>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<properties>
		<!-- Compels usage of UTF-8 encoding -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

</project>
